# html5-entity

./: .gitignore  .travis.yml  README.md  generate.sh  html5-entities.cabal  html5-entity.cabal
generation/: Generate.hs  Template.hs
src/Text/Html/: Entity.hs
src/Text/Html/Entity/: Data.hs
src/Text/Html/Entity/Data/: EntityMap.hs  EntitySet.hs
src/Text/Html5/: Entity.hs
src/Text/Html5/Entity/: Data.hs
