name:                html5-entity
version:             0.1.0.0
synopsis:            A library for working with html5 entities
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          konstantin@anche.no
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.Html5.Entity
                       Text.Html5.Entity.Data
  build-depends:       base
                     , containers
  hs-source-dirs:      src/
  ghc-options:         -O2 -Wall
  default-language:    Haskell98

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , html5-entity
                     , criterion
  ghc-options:         -O2 -Wall
  default-language:    Haskell98
