name:                html5-entity
version:             0.1.0.0
synopsis:            A library for looking up and validating HTML5 entities.
description:         A library for looking up and validating HTML5 entities.
                     The <http://html.spec.whatwg.org/multipage/entities.json following>
                     document is used as an authoritative source of the valid
                     entity names and their corresponding codepoints.
                     You can think of the library as about bindings to the data
                     in that file. For usage see the 'Text.Html5.Entity'
                     module.
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          konstantin@anche.no
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.Html5.Entity
                       Text.Html5.Entity.Data
  build-depends:       base
                     , text
                     , containers
  hs-source-dirs:      src/
  ghc-options:         -Wall -O2
  default-language:    Haskell98

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , html5-entity
                     , criterion
  ghc-options:         -Wall -O2
  default-language:    Haskell98
